Fixed alignment error on About Us page (EEs were not centered); Added image of prototype: waiting for missing image containing deployment system; Prototyping Section is now live;

--- a/css/multiColumnTemplate.css
+++ b/css/multiColumnTemplate.css
@@ -50,7 +50,7 @@
 	line-height: 24px;
 	text-align: justify;
 	padding: 10px 25%;
-	margin: 15px 10%;
+	margin: 15px 8%;
 }
 
 .row .columns p {
